still need to finish sorting

--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
-<html>
+<!DOCTYPE html>
+<html ng-app='Friends'>
 <head>
 <script src='http://code.jquery.com/jquery-1.10.2.js' type='text/javascript'></script>
 <link rel="stylesheet" href="http://netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap.min.css">
@@ -16,7 +17,7 @@
 <title>Facebook Lesson 18</title>
 </head>
 
-<body>
+<body ng-controller='FriendController'>
 
 <h1>The <strong>facebook</strong> Friend Machine</h1>
 
@@ -26,47 +27,41 @@
 <form class="form-inline searchForm" role="form">
   <div class="form-group">
 
-  <input class="form-control" placeholder="Search Anything About Your Friends" >
-  <!-- The stuff below is For step 5....get rid of the one above if you wish-->
-<!--    
-    <input class="form-control" placeholder="Search Your Friends' Name" >
-    <input class="form-control" placeholder="Search Your Freinds' Location" > 
- -->
+  <input class="form-control" placeholder="Search Your Friends' Name" ng-model='searchTerm.name' ng-model='sort'>
+  <input class="form-control" placeholder="Search Your Friends' Location"  ng-model='searchTerm.current_location'> 
+
     <select class="input-medium">
-        <option>Name</option>
-        <option># friends</option>
-        <option>City</option>
-        <option>State</option>
-        <option>Country</option>
+        <option value='friend.name'>Name</option>
+        <option value='friend.friend_count'># friends</option>
+        <option value='friend.current_location.city'>City</option>
+        <option value='friend.current_location.state'>State</option>
+        <option value='friend.current_location.country'>Country</option>
     </select>
     <select class="input-medium">
+      <select ng-model='filterBy' ng-options='item.key for item in options' ></select>
+      <select ng-model='orderReverse' class='input-medium'>
         <option value="false">Descending</option>
         <option value="true">Ascending</option>
     </select>
+  </select>
   </div>
 </form>
 
   <ul>
-    <li class='friend'>
-       <img class="profile-pic" src='https://scontent-a.xx.fbcdn.net/hprofile-ash3/833_10200838803828124_1233160321_a.jpg'>
-      <h3>Cali Fornia</h3>
+    <li class='friend' ng-repeat="friend in friends | filter:searchTerm | orderBy: filterBy.value:orderReverse">
+       <img class="profile-pic" ng-src='{{friend.pic_square}}'>
+      <h3>{{friend.name}}</h3>
       <div class="location">
-        Location: New Port Beach, California, United States
+        Location: {{friend.current_location.city}}, {{friend.current_location.state}}, {{friend.current_location.country}}
       </div>      
-      <div class="status">
-        Status: I hate the snow. I wish I was on the beach right now!!! <span class="hashtag">#ihateprovo</span>
+      <div class="status" ng-show='text'>
+        Status: {{friend.status.message}} <span class="hashtag">#ihateprovo</span>
       </div>      
       <div class="num-friends">
-        Friends: 1,367
+        {{friend.friend_count}}
       </div>
     </li>
   </ul>
 </div>
-
-
-
-
-
-
 </body>
 </html>
